Build native image

--- a/src/main/resources/META-INF/native-image/native-image.properties
+++ b/src/main/resources/META-INF/native-image/native-image.properties
@@ -1,9 +1,16 @@
-Args = --initialize-at-build-time=org.msgpack,io.ably.lib.types \
+Args = --initialize-at-build-time=org.example,kotlin,ch.qos.logback,org.slf4j \
+      --initialize-at-run-time=org.msgpack \
+      --initialize-at-run-time=org.msgpack.core \
+      --initialize-at-run-time=org.msgpack.core.buffer \
+      --initialize-at-run-time=io.ably.lib.util.Crypto \
+      --initialize-at-run-time=com.davidehrmann.vcdiff.util.ZeroInitializedAdler32 \
+      --initialize-at-build-time=kotlin.jvm.internal.PropertyReference1Impl \
+      --initialize-at-build-time=kotlin.jvm.internal.Reflection \
       --allow-incomplete-classpath \
       --report-unsupported-elements-at-runtime \
+      -Dio.netty.noUnsafe=true \
+      -H:+AllowDeprecatedInitializeAllClassesAtBuildTime \
       -H:+ReportExceptionStackTraces \
       -H:+PrintClassInitialization \
-      -H:+AddAllCharsets \
-      -H:+AllowVMInspection \
-      -H:+UnlockExperimentalVMOptions \
-      -H:SubstitutionFiles=META-INF/native-image/substitutions.json
+      --enable-monitoring \
+      -H:+AddAllCharsets
